feat: Implement board creation

--- a/app/pages/home/home.html
+++ b/app/pages/home/home.html
@@ -1,14 +1,15 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar primary>
     <ion-title>
-      Ionic Blank
+      Live Boards
     </ion-title>
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+<ion-content class="home">
+
 </ion-content>
+
+<button fab fab-bottom fab-right (click)="addIconTapped()">
+  <ion-icon name="add"></ion-icon>
+</button>
