feat: Show the list of boards on the home page

--- a/app/pages/home/home.html
+++ b/app/pages/home/home.html
@@ -7,7 +7,7 @@
 </ion-header>
 
 <ion-content class="home">
-
+  <board-list [boards]="boards"></board-list>
 </ion-content>
 
 <button fab fab-bottom fab-right (click)="addIconTapped()">
