feat: Allow to view and create lists

--- a/app/pages/board/board.html
+++ b/app/pages/board/board.html
@@ -12,6 +12,9 @@
     <ion-scroll scrollX="true" scrollY="true">
       <ion-row>
         <list-element *ngFor="let list of board.lists" [list]="list"></list-element>
+        <ion-col>
+          <button (click)="onCreateListPressed()">Create List</button>
+        </ion-col>
       </ion-row>
     </ion-scroll>
 
