feat: Implement tasks

--- a/app/pages/board/board.html
+++ b/app/pages/board/board.html
@@ -20,3 +20,7 @@
 
   </scroll-content>
 </ion-content>
+
+<button *ngIf="board && board.lists.length" fab fab-bottom fab-right (click)="addIconPressed()">
+  <ion-icon name="add"></ion-icon>
+</button>
