--- a/app/pages/board/board.html
+++ b/app/pages/board/board.html
@@ -39,7 +39,7 @@
   </scroll-content>
 </ion-content>
 
-<button *ngIf="board && (board.verticalRelations.length || board.horizontalRelations.length)"
+<button *ngIf="canAddItems()"
         fab fab-bottom fab-right (click)="addIconPressed()">
   <ion-icon name="add"></ion-icon>
 </button>
