--- a/app/pages/auth/auth.html
+++ b/app/pages/auth/auth.html
@@ -1,3 +1,4 @@
 <ion-content padding class="auth">
   <button (click)="googleLogin()" full>Google Login</button>
+  <button (click)="facebookLogin()" full>Facebook Login</button>
 </ion-content>
