feat: Implement GitHub authentication

--- a/app/pages/auth/auth.html
+++ b/app/pages/auth/auth.html
@@ -1,4 +1,5 @@
 <ion-content padding class="auth">
   <button (click)="googleLogin()" full>Google Login</button>
   <button (click)="facebookLogin()" full>Facebook Login</button>
+  <button (click)="githubLogin()" full>GitHub Login</button>
 </ion-content>
