refactor: Change app name

--- a/app/pages/home/home.html
+++ b/app/pages/home/home.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar primary>
     <ion-title>
-      Live Boards
+      Sync Boards
     </ion-title>
     <ion-buttons end>
       <button (click)="moreIconPressed()">
