--- a/app/pages/welcome/welcome.html
+++ b/app/pages/welcome/welcome.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar primary>
     <ion-title>
-      Welcome to Live Boards
+      Welcome to Sync Boards
     </ion-title>
   </ion-navbar>
 </ion-header>
